1.引导页开发完成 2.欢迎页开发完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,8 +102,9 @@ android.applicationVariants.all { variant ->
     }
 }
 
-
 dependencies {
     implementation project(path: ':lib')
-
+    implementation project(path: ':thirdsdk:amap')
+    implementation project(path: ':thirdsdk:scan')
+    implementation project(path: ':thirdsdk:mpchart')
 }
