--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:name=".MainActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".ui.common.activity.WebActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
     </application>
 
 
