--- a/thirdsdk/amap/build.gradle
+++ b/thirdsdk/amap/build.gradle
@@ -1,17 +1,19 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
+def versions = rootProject.ext.versions
 
 android {
-    compileSdk 32
+    compileSdk versions.compileSdkVersion
 
     defaultConfig {
-        minSdk 21
-        targetSdk 32
+        minSdk versions.minSdkVersion
+        targetSdk versions.targetSdkVersion
+        versionCode 1
+        versionName "1.0.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        manifestPlaceholders = [amapKey: rootProject.ext.odm.amapKey]
     }
 
     buildTypes {
@@ -30,11 +32,8 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //3D地图SDK，包含了定位功能
+    api 'com.amap.api:3dmap:9.3.1'
+    //地理编码与逆地理编码（经纬度与实际地址的转换）
+    api 'com.amap.api:search:9.3.1'
 }
