--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,12 @@
             android:exported="false"
             android:screenOrientation="nosensor" />
 
+        <activity
+            android:name=".ui.mine.activity.RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
 
     </application>
 
