--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:exported="false"
             android:screenOrientation="nosensor" />
 
+        <activity
+            android:name=".ui.charge.activity.ChargeActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
 
 
     </application>
