--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,11 @@
             android:exported="false"
             android:screenOrientation="nosensor" />
 
+        <activity
+            android:name=".ui.charge.activity.RecordActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
 
     </application>
 
