--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,12 @@
             android:exported="false"
             android:screenOrientation="nosensor" />
 
+        <activity
+            android:name=".ui.chargesetting.activity.ChargeSettingActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
 
     </application>
 
