--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,13 @@
             android:name=".ui.chargesetting.activity.ChargeSettingActivity"
             android:exported="false"
             android:screenOrientation="nosensor" />
+
+        <activity
+            android:name=".ui.authorize.AuthListActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
     </application>
 
 </manifest>
