我的相关页面开发

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,9 +69,21 @@
             android:screenOrientation="nosensor" />
 
         <activity
-            android:name=".ui.authorize.AuthListActivity"
+            android:name=".ui.authorize.activity.AuthListActivity"
             android:exported="false"
             android:screenOrientation="nosensor" />
+
+        <activity
+            android:name=".ui.mine.activity.PersonalInfoActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+        <activity
+            android:name=".ui.mine.activity.HelpSupportActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
 
 
     </application>
