--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.shuoxd.charge">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".application.MainApplication"
         android:allowBackup="true"
@@ -46,6 +48,7 @@
         <activity
             android:name=".ui.mine.activity.RegisterActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="nosensor" />
         <activity
             android:name=".ui.charge.activity.ChargeActivity"
@@ -102,6 +105,11 @@
             android:name=".ui.mine.activity.ForgotPasswordActivity"
             android:exported="false"
             android:screenOrientation="nosensor" />
+        <activity
+            android:name=".ui.common.activity.ScanActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
 
 
         <provider
