--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,8 +48,8 @@
         <activity
             android:name=".ui.mine.activity.RegisterActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="nosensor" />
+            android:screenOrientation="nosensor"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.charge.activity.ChargeActivity"
             android:exported="false"
@@ -110,6 +110,11 @@
             android:exported="false"
             android:screenOrientation="nosensor" />
 
+
+        <activity
+            android:name=".ui.smartcharge.ScheduledChargeActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
 
 
         <provider
