新增功能开发完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,19 @@
             android:screenOrientation="nosensor" />
 
 
+        <activity
+            android:name=".ui.authorize.activity.GunAuthActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
+        <activity
+            android:name=".ui.smartcharge.ActivityOffpeak"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+
+
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileProvider"
