--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
     package="com.shuoxd.charge">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 
     <application
         android:name=".application.MainApplication"
@@ -136,6 +143,10 @@
             android:screenOrientation="nosensor"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+        <activity
+            android:name=".bluetooth.cptool.BleSetActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
 
 
         <provider
